cat and rug added

--- a/interior/interior.html
+++ b/interior/interior.html
@@ -103,6 +103,12 @@
         <div id="plants">
             <img src="../interior/plants.png">
         </div>
+        <div id="lucky-cat">
+            <img src="../interior/lucky-cat.png">
+        </div>
+        <div id="rug">
+            <img src="../interior/rug.png">
+        </div>
     </main>
 
 
