functioning door navigation

--- a/interior/interior.html
+++ b/interior/interior.html
@@ -109,6 +109,19 @@
         <div id="rug">
             <img src="../interior/rug.png">
         </div>
+        <div id="infoTop">
+            <img src="../interior/infoTop.png">
+        </div>
+        <div id="infoMain">
+            <img src="../interior/infoMain.png">
+        </div>
+        <div id="doorClosed" onmouseover="openDoor()" onmouseout="closeDoor()" onclick="navigateToPage()">
+            <img src="../interior/doorClosed.png" id="doorImageClosed">
+            <img src="../interior/doorOpen.png" id="doorImageOpen" style="display: none;">
+        </div>
+        <!-- <div id="doorOpen">
+            <img src="../interior/doorOpen.png">
+        </div> -->
     </main>
 
 
@@ -118,8 +131,7 @@
 
 
 
-
-    <script src="index.js></script>
+    <script src="../index.js"></script>
 
 </body>
 
