--- a/interior/interior.html
+++ b/interior/interior.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../interior/interior.css">
     <link href="https://fonts.cdnfonts.com/css/wonder-boy-in-monster-world" rel="stylesheet">
+    <link rel="icon" type="image/png" href="../assets/fireplace.gif">
     <title>Library Interior</title>
 </head>
 
@@ -119,9 +120,22 @@
             <img src="../interior/doorClosed.png" id="doorImageClosed">
             <img src="../interior/doorOpen.png" id="doorImageOpen" style="display: none;">
         </div>
-        <!-- <div id="doorOpen">
-            <img src="../interior/doorOpen.png">
-        </div> -->
+        <div id="pc">
+            <img src="../interior/pc.png">
+        </div>
+        <div id="book">
+            <img src="../interior/book.png">
+        </div>
+        <div id="infoSign">
+            <img src="../interior/infoSign.png">
+        </div>
+        <div id="coffee">
+            <img src="../interior/coffee.png">
+        </div>
+        <div id="smallBookshelf">
+            <img src="../interior/bookshelfSmall.png">
+        </div>
+
     </main>
 
 
