--- a/interior/interior.html
+++ b/interior/interior.html
@@ -33,7 +33,7 @@
             <img src="../interior/bookshelf.png">
         </div>
         <div id="ladder">
-            <img src="../interior/ladder.png">
+            <img src="../interior/ladder.png" id="ladderImg">
         </div>
         <div id="chair1">
             <img src="../interior/chair.png">
@@ -132,7 +132,10 @@
         <div id="coffee">
             <img src="../interior/coffee.png">
         </div>
-        <div id="smallBookshelf">
+        <div id="smallBookshelf1">
+            <img src="../interior/bookshelfSmall.png">
+        </div>
+        <div id="smallBookshelf2">
             <img src="../interior/bookshelfSmall.png">
         </div>
 
