library files added

--- a/interior/interior.html
+++ b/interior/interior.html
@@ -121,7 +121,8 @@
             <img src="../interior/doorOpen.png" id="doorImageOpen" style="display: none;">
         </div>
         <div id="pc">
-            <img src="../interior/pc.png">
+            <a href="../library/library.html"> <img src="../interior/pc.png"></a>
+
         </div>
         <div id="book">
             <img src="../interior/book.png">
