--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.cdnfonts.com/css/wonder-boy-in-monster-world" rel="stylesheet">
-    <link rel="icon" href="/assets/fireplace.gif">
+    <link rel="icon" href="assets/fireplace.gif">
     <title>Library</title>
 </head>
 
@@ -17,7 +17,9 @@
         <a href="interior/interior.html"> <img src="exterior/library_door.gif"></a>
     </div>
 
-    <script src="index.js></script>
+    <div id="treebeard"></div>
+
+    <script src="move.js"></script>
 
 </body>
 
