changed paths/locations of imgs and files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div id="treebeard"></div>
 
-    <script src="move.js"></script>
+    <script src="exterior/move.js"></script>
 
 </body>
 
