--- a/interior/interior.html
+++ b/interior/interior.html
@@ -122,7 +122,6 @@
         </div>
         <div id="pc">
             <a href="../library/library.html"> <img src="../interior/pc.png"></a>
-
         </div>
         <div id="book">
             <img src="../interior/book.png">
@@ -140,6 +139,14 @@
             <img src="../interior/bookshelfSmall.png">
         </div>
 
+        <div id="mush1">
+            <img src="../interior/LargeMushroom_Idle_1.png">
+        </div>
+        <div id="mush2">
+            <img src="../interior/SmallMushroom_Idle_1.png">
+        </div>
+        <div id="speechBubble1" class="speechBubble">!</div>
+        <div id="speechBubble2" class="speechBubble">...</div>
     </main>
 
 
